# Raytracer

./: CMakeLists.txt  LICENSE  main.cpp
raytracer/: Helper.cpp  Helper.h  Tuple.cpp  Tuple.h
raytracer/features/: Helper.cpp  Helper.h  Tuple.cpp
raytracer/features/Camera/: Camera.cpp  Camera.h
raytracer/features/Canvas/: Canvas.cpp  Canvas.h
raytracer/features/Intersection/: Intersection.cpp  Intersection.h  Intersections.cpp  Intersections.h  Junctions.h
raytracer/features/Light/: Light.cpp  Light.h
raytracer/features/Material/: Material.cpp  Material.h
raytracer/features/Matrix/: Matrices.h  Matrix.cpp  Matrix.h  Transform.cpp  Transform.h
raytracer/features/Ray/: PreComputation.cpp  PreComputation.h  Ray.cpp  Ray.h
raytracer/features/Shape/: Shapes.h  Sphere.cpp  Sphere.h
raytracer/features/Tuple/: Color.cpp  Color.h  Point.cpp  Point.h  Tuple.cpp  Tuple.h  Tuples.h  Vector.cpp  Vector.h
raytracer/features/World/: World.cpp  World.h
tests/: CMakeLists.txt  CameraTest.cpp  CanvasTest.cpp  DummyTest.cpp  HelperTest.cpp  IntersectionTest.cpp  LightTest.cpp  MaterialTest.cpp  MatrixTest.cpp  RaySphereIntersections.cpp  RayTest.cpp  ShapeTest.cpp  TransformTest.cpp  TupleTest.cpp  WorldTest.cpp
